selfhost/test/typechecker/funcdecl_error_param_unfilled_holes.2.out
Error at %FILE_NAME%:1:10
Could not determine type for parameter
  |  func foo(a = []) {}
              ^
Type '<unknown>[]' has unfilled holes. Please use an explicit type annotation to denote the type
